view:fix signup responsiveness on mobile

--- a/app/assets/stylesheets/devise/shared.scss
+++ b/app/assets/stylesheets/devise/shared.scss
@@ -5,9 +5,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
   align-items: center;
-  height: 101vh;
-  bottom: 0;
+  align-self: stretch;
   min-width: 100%;
   background-color: $shiny-blue;
   overflow:auto; 
